# uniffi-bindgen-react-native

./: .clang-format-ignore  .gitignore  .licence-config.yaml  .npmignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json  uniffi-bindgen-react-native.podspec
cpp/hermes-extension/: CMakeLists.txt
cpp/hermes-rust-extension/: CMakeLists.txt
cpp/test-harness/: CMakeLists.txt  MyCallInvoker.h  README.md  test-runner.cpp  timers.js.inc
crates/ubrn_bindgen/: Cargo.toml  askama.toml
crates/ubrn_bindgen/src/: cli.rs  lib.rs  main.rs  react_native.rs  switches.rs  wasm.rs
crates/ubrn_bindgen/src/bindings/: entrypoint.rs  extensions.rs  metadata.rs  mod.rs  react_native.rs  switches.rs  type_map.rs  uniffi_toml.rs
crates/ubrn_bindgen/tests/: player_template_snapshots.rs
crates/ubrn_cli/: Cargo.toml  rinja.toml
crates/ubrn_cli/fixtures/defaults/: package.json  ubrn-wasm.monorepo.config.yaml  ubrn-wasm.multifeature.config.yaml  ubrn-wasm.rustflags.config.yaml  ubrn.config.yaml
crates/ubrn_cli/fixtures/distinct-bindings/: package.json  ubrn-with-entrypoint.config.yaml  ubrn.config.yaml
crates/ubrn_cli/fixtures/merging-toml/: Cargo.patch.toml  package.json  ubrn.config.yaml
crates/ubrn_cli/src/: android.rs  building.rs  cli.rs  config.rs  generate.rs  ios.rs  lib.rs  main.rs  repo.rs  rust.rs  source.rs  test_utils.rs  workspace.rs
crates/ubrn_cli/src/codegen/: mod.rs
crates/ubrn_cli/src/commands/: args.rs  building.rs  checkout.rs  generate.rs  mod.rs
crates/ubrn_cli/src/config/: mod.rs  npm.rs  rust_crate.rs
crates/ubrn_cli/src/generate/: jsi.rs  mod.rs
crates/ubrn_cli/src/jsi/: bindings.rs  codegen.rs  generate.rs  mod.rs
crates/ubrn_cli/src/napi/: generate.rs  mod.rs
crates/ubrn_cli/src/wasm/: bindings.rs  codegen.rs  commands.rs  config.rs  generate.rs  mod.rs
crates/ubrn_cli/templates/wasm/: Cargo.toml  Cargo.toml.txt  index.web.ts  lib.rs
crates/ubrn_cli/tests/: happy_path.rs  mod.rs  web_variants.rs
crates/ubrn_cli_testing/: Cargo.toml
crates/ubrn_cli_testing/src/: cli.rs  command.rs  command_assertions.rs  file.rs  file_assertions.rs  fixture.rs  lib.rs  recording.rs
crates/ubrn_cli_testing/src/tests/: command_tests.rs  file_shim_str_tests.rs  file_shim_tests.rs  file_tests.rs  fixture_tests.rs  mod.rs
crates/ubrn_common/: Cargo.toml
crates/ubrn_common/src/: commands.rs  files.rs  fmt.rs  lib.rs  rust_crate.rs  serde.rs  testing.rs
crates/ubrn_testing/: Cargo.toml
crates/ubrn_testing/src/: lib.rs  thread.rs
crates/ubrn_testing/src/timer/: mod.rs
crates/uniffi-bindgen-react-native/: Cargo.toml  askama.toml
crates/uniffi-bindgen-react-native/src/: main.rs
crates/uniffi-bindgen-react-native/src/bindings/: mod.rs
crates/uniffi-runtime-javascript/: Cargo.toml  README.md
crates/uniffi-runtime-javascript/src/: lib.rs  wasm32.rs
docs/: book.toml
examples/arithmetic-procmacro/: Cargo.toml
examples/arithmetic-procmacro/src/: lib.rs
examples/arithmetic-procmacro/tests/: test_bindings.rs
examples/arithmetic-procmacro/tests/bindings/: test_arithmetic_procmacro.ts
examples/rondpoint-procmacro/: Cargo.toml
examples/rondpoint-procmacro/src/: lib.rs
examples/rondpoint-procmacro/tests/: test_bindings.rs
examples/rondpoint-procmacro/tests/bindings/: test_rondpoint_procmacro.ts
fixtures/arc-futures/: Cargo.toml  README.md  uniffi.toml
fixtures/arc-futures/src/: lib.rs
fixtures/arc-futures/tests/: test_bindings.rs
fixtures/arc-futures/tests/bindings/: test_arc_futures.ts
fixtures/async-calls/: Cargo.toml  build.rs
fixtures/async-calls/src/: async-calls.udl  lib.rs
fixtures/async-calls/src/platform_specific/: mod.rs  native.rs  wasm.rs
fixtures/async-calls/tests/: test_bindings.rs
fixtures/async-calls/tests/bindings/: test_async_calls.ts
fixtures/async-deadlock/: Cargo.toml
fixtures/async-deadlock/src/: lib.rs
fixtures/async-deadlock/tests/bindings/: test_async_deadlock.py  test_async_deadlock.ts
fixtures/async-traits/: Cargo.toml
fixtures/async-traits/src/: lib.rs
fixtures/async-traits/tests/: test_bindings.rs
fixtures/async-traits/tests/bindings/: .supported-flavors.txt  test_async_traits.ts
fixtures/benchmark/: Cargo.toml
fixtures/benchmark/src/: lib.rs
fixtures/benchmark/tests/: test_bindings.rs
fixtures/benchmark/tests/bindings/: test_benchmark.ts
fixtures/callback-interface/: Cargo.toml
fixtures/callback-interface/src/: lib.rs
fixtures/callback-interface/tests/bindings/: test_callback_interface.ts
fixtures/callbacks-regression/: Cargo.toml  build.rs
fixtures/callbacks-regression/src/: lib.rs
fixtures/callbacks-regression/tests/: test_bindings.rs
fixtures/callbacks-regression/tests/bindings/: test_callbacks_regression.ts
fixtures/coverall2/: Cargo.toml
fixtures/coverall2/src/: lib.rs
fixtures/coverall2/tests/: test_bindings.rs
fixtures/defaults/: Cargo.toml
fixtures/defaults/src/: lib.rs
fixtures/defaults/tests/: test_bindings.rs
fixtures/error-types/: Cargo.toml  build.rs
fixtures/error-types/src/: lib.rs
fixtures/error-types/tests/: test_bindings.rs
fixtures/gc-callbacks-crasher/: Cargo.toml
fixtures/gc-callbacks-crasher/src/: lib.rs
fixtures/gc-callbacks-crasher/tests/: test_bindings.rs
fixtures/objects/: Cargo.toml
fixtures/objects/src/: lib.rs
fixtures/rondpoint-procmacro/: Cargo.toml
fixtures/strict-byte-arrays/: Cargo.toml  uniffi.toml
fixtures/strict-byte-arrays/src/: lib.rs
fixtures/strict-byte-arrays/tests/: test_bindings.rs
fixtures/value-type-methods/: Cargo.toml
fixtures/value-type-methods/src/: lib.rs
fixtures/value-type-methods/tests/: test_bindings.rs  test_generated_bindings.rs
fixtures/wasm-arc-futures/: Cargo.toml  uniffi.toml
fixtures/wasm-arc-futures/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: clean.rs  main.rs
xtask/src/bootstrap/: hermes.rs  mod.rs  test_runner.rs  yarn.rs
xtask/src/fmt/: mod.rs
xtask/src/run/: Cargo.template.toml  cpp_bindings.rs  generate_bindings.rs  jsi.rs  mod.rs  nodejs.rs  rust_crate.rs  typescript.rs  wasm.rs
xtask/src/util/: mod.rs
(+594 files in other folders)
