[workspace]
members = [
    "crates/*",
    "fixtures/*",
    "xtask",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
askama = "0.12.1"
camino = "1.1.6"
cargo_metadata = "0.18.1"
clap = { version = "4.5.4", features = ["derive"] }
heck = "0.5.0"
paste = "1.0.14"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1", features = ["derive"] }
uniffi = "=0.28.0"
uniffi_bindgen = "=0.28.0"
uniffi_meta = "=0.28.0"
matrix-sdk-ffi = { rev = "8fbf1101c232bcd69583eaaa4605542653213822", git = "https://github.com/vimeiro-co/matrix-rust-sdk-mirror" }
matrix-sdk = { rev = "8fbf1101c232bcd69583eaaa4605542653213822", git = "https://github.com/vimeiro-co/matrix-rust-sdk-mirror" }

[patch.crates-io]
# async-compat = { git = "https://github.com/jplatte/async-compat", rev = "16dc8597ec09a6102d58d4e7b67714a35dd0ecb8" }
# const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }
