[workspace]
members = [
    "crates/*",
    "fixtures/*",
    "xtask",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
rinja = "0.3.5"
camino = "1.1.6"
cargo_metadata = "0.15"
clap = { version = "4.5.4", features = ["derive"] }
heck = "0.5.0"
paste = "1.0.14"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1", features = ["derive"] }
uniffi = "=0.28.2"
uniffi_bindgen = "=0.28.2"
uniffi_meta = "=0.28.2"
