 [workspace]
members = [
    "crates/*",
    "fixtures/*",
    "xtask",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
askama = "0.13.1"
camino = "1.1.6"
cargo_metadata = "0.19.2"
clap = { version = "4.5.4", features = ["derive"] }
extend = "1.2.0"
heck = "0.5.0"
paste = "1.0.14"
pathdiff = { version = "0.2.1", features = ["camino"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8.22"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "9578adccb" }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs", rev = "9578adccb" }
uniffi_meta = { git = "https://github.com/mozilla/uniffi-rs", rev = "9578adccb" }
