[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
test = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
cargo_metadata = "0.18.1"
clap = { workspace = true }
glob = "0.3.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
uniffi-common = { path = "../crates/uniffi-common" }
