[package]
name = "uniffi-bindgen-react-native"
version = "0.28.3-0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen-react-native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = []

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
heck = { workspace = true }
paste = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
textwrap = "0.16.1"
ubrn_bindgen = { path = "../ubrn_bindgen" }
ubrn_common = { path = "../ubrn_common" }
uniffi_bindgen = { workspace = true }
uniffi_meta = { workspace = true }
extend = "1.2.0"
topological-sort = "0.2.2"
globset = { version = "0.4.14", features = ["serde1"] }
