[package]
name = "uniffi-bindgen-react-native"
version = "0.30.0-0"
edition = "2021"

[lib]
name = "ubrn_cli"
path = "src/lib.rs"

# This explicitly defines the binary
[[bin]]
name = "uniffi-bindgen-react-native"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasm"]
wasm = []

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
extend = { workspace = true }
globset = { version = "0.4.14", features = ["serde1"] }
heck = { workspace = true }
paste = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
serde-toml-merge = "=0.3.9"
textwrap = "0.16.1"
toml = { workspace = true, features = ["display"] }
topological-sort = "0.2.2"
ubrn_bindgen = { path = "../ubrn_bindgen", features = ["wasm"] }
ubrn_common = { path = "../ubrn_common" }
uniffi_bindgen = { workspace = true }
uniffi_meta = { workspace = true }

[dev-dependencies]
ubrn_cli_testing = { path = "../ubrn_cli_testing" }
