[package]
name = "ubrn_cli_testing"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Testing utilities for UBRN CLI tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
camino = { workspace = true }
ubrn_common = { path = "../ubrn_common" }

[dev-dependencies]
tempfile = "3.8"
