[package]
name = "ubrn_common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
cargo_metadata = { workspace = true }
extend = { workspace = true }
glob = "0.3.1"
serde = { workspace = true }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
toml = { workspace = true }
which = "6.0.1"
