[package]
name = "uniffi-runtime-javascript"
version = "0.29.0-0.1"
edition = "2021"
authors = ["James Hugman <james@hugman.tv>"]
description = "Javascript runtime for UniFFI-generated bindings"
license = "MPL-2.0"
repository = "https://github.com/jhugman/uniffi-bindgen-react-native"
readme = "README.md"
keywords = ["ffi", "code-generation", "javascript", "wasm"]
categories = ["api-bindings", "development-tools::ffi"]

[dependencies]
uniffi_core = { version = "0.29", default-features = false }
wasm-bindgen = { version = "0.2.97", optional = true }

[features]
wasm32 = ["wasm-bindgen"]
