[package]
name = "uniffi-runtime-javascript"
version = "0.29.3-1"
edition = "2021"
authors = ["James Hugman <james@hugman.tv>"]
description = "Javascript runtime for UniFFI-generated bindings"
license = "MPL-2.0"
repository = "https://github.com/jhugman/uniffi-bindgen-react-native"
readme = "README.md"
keywords = ["ffi", "code-generation", "javascript", "wasm"]
categories = ["api-bindings", "development-tools::ffi"]

[dependencies]
# uniffi_core = { version = "0.29", default-features = false }
uniffi_core = { git = "https://github.com/mozilla/uniffi-rs", rev = "e46a27541", features = ["wasm-unstable-single-threaded"] }
# wasm-bindgen = { version = "=0.2.106", optional = true }
wasm-bindgen = { version = "0.2.97", optional = true }

[features]
wasm32 = ["wasm-bindgen"]
