[package]
name = "uniffi-example-arithmetic-procmacro"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "arithmeticpm"

[dependencies]
uniffi = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
ubrn_macros = { workspace = true }
ubrn_fixture_testing = { workspace = true }
uniffi = { workspace = true, features = ["bindgen-tests"] }
