[package]
name = "uniffi-fixtures-async-calls"
version = "0.21.0"
authors = ["jhugman"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_async_calls"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "uniffi-fixtures-async-calls"
path = "src/bin.rs"

[dependencies]
# Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
once_cell = "1.18.0"
uniffi = { workspace = true, features = ["tokio", "cli", "scaffolding-ffi-buffer-fns"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.1", features = ["time", "sync"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build", "scaffolding-ffi-buffer-fns"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
