[package]
name = "uniffi-callback-interface"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.83"
thiserror = "1.0"
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
