[package]
name = "uniffi-fixture-callbacks-deadlock-regression"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_callbacks"

[dependencies]
uniffi = { workspace = true }
ubrn_testing = { path = "../../crates/ubrn_testing" }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
ubrn_macros = { workspace = true }
ubrn_fixture_testing = { workspace = true }
uniffi = { workspace = true, features = ["bindgen-tests"] }
