[package]
name = "uniffi-fixture-coverall2"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_coverall2"
crate-type = ["lib", "cdylib"]

[dependencies]
async-std = "1.12.0"
thiserror = "1.0"
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
ubrn_macros = { workspace = true }
ubrn_fixture_testing = { workspace = true }
uniffi = { workspace = true, features = ["bindgen-tests"] }
