[package]
name = "uniffi-fixture-error-types"
version = "0.22.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_error_types"

[dependencies]
uniffi = { workspace = true }
anyhow = "1"
thiserror = "1.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
